bk_ida/gccida/c0/dead_or_set_regno_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dead_or_set_regno_p/src/rtlanal.c:2204:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pattern = ( rtx)insn[2]; 
                ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dead_or_set_regno_p/src/rtlanal.c:2206:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pattern = ( rtx)pattern[1]; 
                ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dead_or_set_regno_p/src/rtlanal.c:2272:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)dest)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dead_or_set_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dead_or_set_regno_p/src/rtlanal.c:2273:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v34 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)dest)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dead_or_set_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dead_or_set_regno_p/src/rtlanal.c:2303:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
body = ( rtx)body[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dead_or_set_regno_p/src/rtlanal.c:2369:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)dest_0)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dead_or_set_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dead_or_set_regno_p/src/rtlanal.c:2370:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v28 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)dest_0)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dead_or_set_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dead_or_set_regno_p/src/obj/rtlanal.o] Error 1
